# advent-of-code

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  WORKSPACE.bazel
.devcontainer/: Dockerfile  devcontainer.json
2021/: CMakeLists.txt
2021/01/: CMakeLists.txt  main.cpp
2021/01b/: CMakeLists.txt  main.cpp
2021/02/: CMakeLists.txt  main.cpp
2021/02b/: CMakeLists.txt  main.cpp
2021/03/: CMakeLists.txt  main.cpp
2021/03b/: CMakeLists.txt  main.cpp
2021/04/: CMakeLists.txt  main.cpp
2021/04b/: CMakeLists.txt  main.cpp
2021/05/: CMakeLists.txt  main.cpp
2021/05b/: CMakeLists.txt  main.cpp
2021/06/: CMakeLists.txt  main.cpp
2021/06b/: CMakeLists.txt  main.cpp
2021/07/: CMakeLists.txt  main.cpp
2021/07b/: CMakeLists.txt  main.cpp
2021/08/: CMakeLists.txt  main.cpp
2021/08b/: CMakeLists.txt  main.cpp
2021/09/: CMakeLists.txt  main.cpp
2021/09b/: CMakeLists.txt  main.cpp
2021/10/: CMakeLists.txt  main.cpp
2021/10b/: CMakeLists.txt  main.cpp
2021/11/: CMakeLists.txt  main.cpp
2021/11b/: CMakeLists.txt  main.cpp
2021/12/: CMakeLists.txt  main.cpp
2021/12b/: CMakeLists.txt  main.cpp
2021/13/: CMakeLists.txt  main.cpp
2021/13b/: CMakeLists.txt  main.cpp
2021/14/: CMakeLists.txt  main.cpp
2021/14b/: CMakeLists.txt  main.cpp
2021/15/: CMakeLists.txt  main.cpp
2021/15b/: CMakeLists.txt  main.cpp
2021/16/: CMakeLists.txt  main.cpp
2021/16b/: CMakeLists.txt  main.cpp
2022/: CMakeLists.txt
2022/01/: CMakeLists.txt  main.cpp
2022/02/: CMakeLists.txt  main.cpp
2022/03/: CMakeLists.txt  main.cpp
2022/04/: CMakeLists.txt  main.cpp
2022/05/: CMakeLists.txt  main.cpp
2022/06/: CMakeLists.txt  input.txt  main.cpp
2022/07/: CMakeLists.txt  main.cpp
2022/08/: CMakeLists.txt  main.cpp
2022/09/: CMakeLists.txt  main.cpp
2022/10/: CMakeLists.txt  main.cpp
2023/: CMakeLists.txt
2023/01/: BUILD  CMakeLists.txt  main.cpp
2023/02/: BUILD  CMakeLists.txt  main.cpp
2023/03/: CMakeLists.txt  main.cpp
2023/04/: CMakeLists.txt  main.cpp
2023/05/: CMakeLists.txt  main.cpp
2023/06/: CMakeLists.txt  main.cpp
2023/07/: CMakeLists.txt  main.cpp
2023/08/: BUILD.bazel  CMakeLists.txt  main.cpp
2024/01/: main.cpp
2024/02/: main.cpp
scripts/: install_bazel.sh  install_buildifier.sh
utils/: BUILD.bazel  CMakeLists.txt  array_utils.h  fileinput.h  input_helpers.h  map_utils.h  string_utils.h
