add_subdirectory(01)
add_subdirectory(01b)
add_subdirectory(02)
add_subdirectory(02b)
add_subdirectory(03)
add_subdirectory(03b)
add_subdirectory(04)
add_subdirectory(04b)
add_subdirectory(05)
add_subdirectory(05b)
add_subdirectory(06)
add_subdirectory(06b)
add_subdirectory(07)
add_subdirectory(07b)
add_subdirectory(08)
add_subdirectory(08b)
add_subdirectory(09)
add_subdirectory(09b)
add_subdirectory(10)
add_subdirectory(10b)
add_subdirectory(11)
add_subdirectory(11b)
add_subdirectory(12)
add_subdirectory(12b)
add_subdirectory(13)